# web

./: .gitignore  README.md
backend/: Dockerfile  README.md  alembic.ini  dev.py  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  data_type.py  errors.py  log.py  main.py  middleware.py  scheduler.py  settings.py
backend/app/docs/: __init__.py
backend/app/routes/: auth.py  case_result.py  user.py
backend/data/: dbmodel.py  services.py
backend/locales/: __init__.py
backend/locales/zh-CN/LC_MESSAGES/: message.po
backend/tests/: conftest.py  test_auth.py
backend/utils/: __init__.py  common.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  stats.html  vite.config.ts
frontend/src/: Admin.tsx  App.css  App.tsx  Login.tsx  caseResult.tsx  index.css  main.tsx  userList.tsx
frontend/src/api/: api.ts
frontend/src/assets/locales/: en_US.json  resources.ts  zh_CN.json
frontend/src/pages/: Admin.tsx  Login.css  Login.tsx  antd_demo.tsx  caseResult.css  caseResult.tsx  userList.tsx
frontend/src/types/: admin.ts  common.ts  login.ts  result.ts
frontend/src/utils/: i18n.ts  requireAuth.tsx
